Fixed ad z-index
Bottom mobile ad no longer overlaps modal window.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4001,7 +4001,7 @@ a.pokebattler{
 		position: fixed;
 		bottom:0;
 		width:100%;
-		z-index:50;
+		z-index:25;
 	}
 	#nitro-header-mobile{
 		display: block;
